# TestTimeTraining-of-LLMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
bsttt/: __init__.py
bsttt/data/episode_builders/: dyntom_episode_builder.py  simpletom_episode_builder.py
bsttt/data/loaders/: dyntom.py  simpletom.py  tom_external.py
bsttt/eval/: bootstrap.py  eval_dyntom.py  eval_external_tom.py  eval_simpletom.py  metrics.py
bsttt/models/: hf_lm_wrapper.py
bsttt/trainers/: __init__.py  bsttt_simpletom.py  prompt_baselines.py
configs/: chartom.yaml  dyntom.yaml  model_llama8b.yaml  model_qwen7b.yaml  simpletom.yaml  train_bsttt.yaml
docs/: ANONYMITY_CHECKLIST.md  REMOTE_PUBLISHING.md  REPRODUCIBILITY.md  TRACK_REQUIREMENTS.md  all_results_modelwise_latex_2026-04-22.tex
paper/: generate_figures.py  main.tex  main_part2.tex
scripts/: aggregate_comparison_table.py  compile_neurips_grid.py  inspect_external_tom_schema.py  machine_validation_external_tom.py  reproduce_main_results.sh  summarize_dyntom_multiseed.py  summarize_external_tom.py  summarize_simpletom_multiseed.py
