[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsttt"
version = "0.1.0"
description = "Belief-State Test-Time Training: A diagnostic evaluation protocol for Theory of Mind in LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anonymous Authors" }]
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "datasets>=2.14.0",
  "peft>=0.7.0",
  "accelerate>=0.24.0",
  "sentencepiece>=0.1.99",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "tqdm>=4.65.0",
  "pyyaml>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bsttt*"]
